--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
-beautifulsoup4==4.14.3
-certifi==2026.1.4
-charset-normalizer==3.4.4
-idna==3.11
-requests==2.32.5
-soupsieve==2.8.3
-typing_extensions==4.15.0
-urllib3==2.6.3
+agentpy==0.1.5
+contourpy==1.3.3
+cycler==0.12.1
+dill==0.4.1
+fonttools==4.61.1
+joblib==1.5.3
+kiwisolver==1.4.9
+matplotlib==3.10.8
+multiprocess==0.70.19
+networkx==3.6.1
+numpy==2.4.1
+packaging==26.0
+pandas==3.0.0
+pillow==12.1.0
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+SALib==1.5.2
+scipy==1.17.0
+six==1.17.0
+tzdata==2025.3
